--- a/vid.jquery.less
+++ b/vid.jquery.less
@@ -52,6 +52,34 @@ input[type=range][orient=vertical] {
 
 		.vid-ctrl-track {
 			width: calc(100% - 140px);
+			position: relative;
+
+			&:not(:hover) .vid-ctrl-tooltip {
+				display: none;
+			}
+
+			.vid-ctrl-tooltip {
+				position: absolute;
+				top: 26px;
+				height: 30px;
+				background-color: #545454;
+				padding: 5px 10px;
+				color: #FAFAFA;
+				box-shadow: 2px 2px 5px #A0A0A0;
+				margin-left: -30px;
+
+				&:before {
+					content: '';
+					width: 0;
+					height: 0;
+					border-left: 8px solid transparent;
+					border-right: 8px solid transparent;
+					border-bottom: 8px solid #545454;
+					position: absolute;
+					top: -7px;
+					left: 22px;
+				}
+			}
 		}
 
 		.vid-ctrl-bar {
@@ -115,5 +143,98 @@ input[type=range][orient=vertical] {
 	&:not(.vid-muted) .vid-ctrl-vol .icon-volume_mute,
 	&.vid-muted .vid-ctrl-vol .icon-volume {
 		display: none;
+	}
+
+	.vid-equalizer {
+		height: 100px;
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		flex-flow: wrap-reverse;
+
+		> i {
+			animation-name: vid-equalizer-i;
+			animation-duration: 2.2s;
+			animation-iteration-count: infinite;
+			animation-timing-function: ease-in-out;
+
+			display: inline-block;
+			width: 8%;
+			height: 9%;
+			background-color: #119087;
+			transition: height 100ms;
+
+			&:nth-child(7n+1) {
+				background-color: #573e57;
+				animation-delay: -1s;
+			}
+
+			&:nth-child(7n+2) {
+				background-color: #5a9f8d;
+				animation-delay: -0.5s;
+			}
+
+			&:nth-child(7n+3) {
+				background-color: #9acedf;
+				animation-delay: -1.5s;
+			}
+
+			&:nth-child(7n+4) {
+				background-color: #77bd9e;
+				animation-delay: -0.25ms;
+			}
+
+			&:nth-child(7n+5) {
+				background-color: #7e9727;
+				animation-delay: -1.25s;
+			}
+
+			&:nth-child(7n+6) {
+				background-color: #e1b83f;
+				animation-delay: -0.75s;
+			}
+
+			&:nth-child(7n+7) {
+				background-color: #be4132;
+				animation-delay: -1.5s;
+			}
+		}
+	}
+
+	&:not(.vid-playing) .vid-equalizer > i {
+		animation-name: vid-equalizer-off;
+		animation-delay: 0ms !important;
+		animation-duration: 300ms;
+		animation-iteration-count: 1;
+	}
+
+	.vid-equalizer + .vid-controls {
+		top: 100px;
+	}
+}
+
+@keyframes vid-equalizer-off {
+	0% {
+		height: 50%;
+	}
+	100% {
+		height: 8%;
+	}
+}
+@keyframes vid-equalizer-i {
+	100%, 0% {
+		height: 20%;
+	}
+	20% {
+		height: 50%;
+	}
+	40% {
+		height: 30%;
+	}
+	60% {
+		height: 100%;
+	}
+	80% {
+		height: 60%;
 	}
 }
